# myriade

./: .cursorrules  .dockerignore  .env.docker  .env.fly  .gitignore  .pre-commit-config.yaml  .terminal.json  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  update_servers.sh  update_website.sh
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: build.yml  fly-review.yml  release.yml  review-apps.yml  test.yml
docs/: TABLE_FEATURE.md  fly-review-apps.md  telemetry.md
proxy/: nginx.conf
scripts/: setup-fly-review-apps.sh  test-docker-build.sh
service/: .env.example  .env.osx  .env.test  CHANGELOG.md  Dockerfile  alembic.ini  app.py  config.py  dev.db  gunicorn_conf.py  main.py  middleware.py  pyproject.toml  pytest.ini  run.sh  scheduler.py  start-fly.sh  start.sh  telemetry.py
service/ai/: api.py
service/auth/: README.md  api.py  auth.py  infra_utils.py  jwt_utils.py  mock.py  proxy_utils.py
service/auth/tests/: test_session_refresh_cache.py
service/back/: activity.py  api.py  background_sync.py  catalog_events.py  catalog_search.py  catalog_socketio.py  catalog_utils.py  data_warehouse.py  datalake.py  dbt_environment.py  dbt_repository.py  dbt_sync.py  github_manager.py  mentions.py  models.py  pdf_export.py  privacy.py  query.py  rewrite_sql.py  scheduler.py  session.py  sync_state.py  utils.py
service/billing/: api.py
service/chat/: analyst_agent.py  api.py  chat_template.txt  cli.py  datachat.py  datachat2_test.py  datachat_test.py  dbt_utils.py  lock.py  memory_utils.py  notes.py  proxy_provider.py  render.py  utils.py  utils_test.py
service/chat/functions/: plot_widget.json
service/chat/tests/: conftest.py  test_functions.py  test_table_feature_example.py  test_todo.py  test_utils.py
service/chat/tests/__snapshots__/: test_functions.ambr
service/chat/tools/: catalog.py  chart_types.py  database.py  dbt.py  document.py  echarts.py  github.py  quality.py  todo.py  workspace.py
service/chat/tools/echarts-render/: package.json  render.js
service/data/sample/: create.py  sample.sqlite
service/db/: __init__.py  metadata.py
service/docs/: VECTOR_SEARCH.md
service/middlewares/: clerk.py
service/migrations/: env.py
service/migrations/versions/: 0001_baseline_after_open_source.py  006f21a18554_add_isanswer.py  00abc8339df1_add_cascade_delete_to_all_database_.py  03bf37a97ee8_migrate_notes_to_comments.py  03ca219fcee9_add_database_and_schema_facets.py  045f1c892f54_remove_table_facet_unique_constraint.py  047e24c2957e_add_privacy_field_to_column_facet.py  04c991f0d2ae_add_project_fix_createdat_updatedat.py  050bddebb99e_add_demo.py  0626815234ba_add_cascade_delete_to_database_foreign_.py  0642395ff862_merge_catalog_branches.py  06756ce6db5b_.py  0ddb62127752_update_semantic_catalog.py  0e933f6adc06_add_dbt_columns.py  0f8a4c77fd2f_add_reviewed_flags.py  17079fd7073b_add_database_sync_status_columns.py  17c439eb88d7_remove_note_column_from_asset.py  19374c61b90a_add_sensitive_data_mapping.py  198bd150d1a3_update_semantic_catalog.py  1c0c28caebb5_update_issue.py  1e36f0e1a315_add_title_column_to_chart.py  1f6fd3b9e901_switch_to_uuid.py  20e2f4ee32f4_add_database_id_to_table_facet.py  2290e3135f5b_remove_privacy_mode.py  25945c932d42_.py  2af9b2c6c9ea_add_reqid.py  2ba0d4f73bb9_update_businessentities_issue.py  2dc0b1830c41_.py  38ee2d062b18_add_chart.py  3f2b8c41d4aa_add_github_integration.py  419430f6aea3_add_document_tables.py  474420e93417_switch_to_uuid.py  4b610242919c_create_admin_user.py  4b610242919c_create_admin_user.pyX  4f56b3cc8a7d_add_conversation_cascade.py  53de7f643cb2_remove_sync_status_columns_from_database.py  553085b11c12_add_catalog_tables.py  5642e37ccbfa_remove_display_column.py  5f9469b957c8_add_image.py  6bb81bb6b719_.py  (+63 more)
service/models/: __init__.py  catalog.py  quality.py
service/tests/: conftest.py  test_echarts_docs.py  test_query_rewrite.py  test_vector_search.py  test_workspace.py  utils.py
service/tests/api/: test_conversations.py  test_databases.py  test_favorites.py  test_query.py  test_questions_subscription.py
service/tests/api/__snapshots__/: test_conversations.ambr  test_databases.ambr  test_favorites.ambr  test_query.ambr
service/tests/auth/: conftest.py  test_allowed_organization.py  test_session_refresh.py  test_session_refresh_cache.py  test_with_auth_cookie_refresh.py
service/tests/chat/: test_proxy_provider.py
service/tests/socket/: test_ping.py
service/utils/: __init__.py  embeddings.py
setup/: README.md  build.sh  install.sh  install_certificate.sh  nginx  nginx.conf  proxy_nginx.conf
setup/app/: Info.plist  app.spec  build.sh  icon.icns
view/: .env  Dockerfile  README.md  components.json  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  test-commit.js  test-formatting.js  test-proper.js  tsconfig.app.json  tsconfig.json  vite.config.ts
view/src/: App.vue  auth.ts  check_version.ts  main.ts  router.ts  useSelectedDatabaseFromContext.ts  vite-env.d.ts
view/src/assets/: main.css
view/src/components/: AgentMentionSuggestion.vue  AnonymousUserBar.vue  AppSidebar.vue  AskCatalogConfirmation.vue  AskQueryConfirmation.vue  AssetBadgeStatus.vue  AssetBase.vue  AssetTagSelect.vue  BaseInput.vue  BaseInputPassword.vue  BaseQuery.vue  BaseSearch.vue  BaseSwitch.vue  BaseTable.vue  BaseTabs.vue  BaseUpload.vue  BrokenReferenceHandler.vue  CatalogAssetsTable.vue  CatalogAssetsView.vue  Chart.vue  Chat.vue  CodeDiffDisplay.vue  CodeFileDisplay.vue  ContextSelection.vue  Control.vue  ConversationList.vue  DataCatalog.vue  DataQualityDashboard.vue  DataQualityReview.vue  DataTable.vue  DatabaseExplorer.vue  DatabaseExplorerItems.vue  DocumentPanel.vue  DocumentPreview.vue  Echart.vue  FeatureFlagPanel.vue  FieldQualityReview.vue  FunctionCallRenderer.vue  Header.vue  InternalMessagePreview.vue  (+15 more)
view/src/composables/: useCatalogTags.ts  useDarkMode.ts  useDashboardStats.ts  useDataQuality.ts  useDocumentMentions.ts  (+4 more)
website/: nginx.conf
(+183 files in other folders)
