[project]
name = "Ada"
description = "Accelerate Data Analysis"
version = "0.4.6"
authors = [
    {name = "Benjamin Derville", email = "benderville@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28.2",
    "SQLAlchemy>=2.0.6",
    "Flask>=2.2.3",
    "Flask-SocketIO>=5.3.3",
    "diskcache>=5.4.0",
    "psycopg2-binary>=2.9.7",
    "pgvector>=0.1.8",
    "alembic>=1.11.2",
    "autochat[all]==0.10.2",
    "pyyaml>=6.0.1",
    "workos==5.15.0",
    "python-dotenv>=1.0.1",
    "syrupy>=4.8.2",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.1"]
snowflake = ["snowflake-connector-python>=3.0.1"]
# Note: Postgres is included by default as the database of the project
all = ["mysql", "snowflake"]  

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.3.4",
]

[tool.ruff]
target-version = "py39"

# Enable Pyflakes (`F`) and Import sorting (`I`)
[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E711"]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["back", "chat", "ai"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
changelog_file = "../CHANGELOG.md"
