[project]
name = "myriade-service"
description = "backend for Myriade analytic solution"
version = "1.14.3"
authors = [
    {name = "Benjamin Derville", email = "benderville@gmail.com"}
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "requests>=2.28.2",
    "SQLAlchemy>=2.0.6",
    "flask>=3.1.2",
    "flask-socketio>=5.3.3",
    "psycopg2-binary>=2.9.7",
    "alembic>=1.11.2",
    "python-dotenv>=1.0.1",
    "syrupy>=4.8.2",
    "sentry-sdk[flask]>=2.23.1",
    "pyyaml>=6.0.1",
    "gunicorn>=23.0.0",
    "eventlet>=0.39.1",
    "nest-asyncio>=1.6.0",
    "sqlglot>=26.16.2",
    "python-json-logger>=2.0.7",
    "duckdb>=1.3.2",
    "agentlys[all]>=0.19.1",
    "agentlys-tools[code-editor]>=0.1.0",
]

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1.1",
]
snowflake = ["snowflake-connector-python>=3.15.0"]
bigquery = ["google-cloud-bigquery>=3.34.0"]
oracle = ["oracledb>=2.0.0"]
# Note: Postgres is included by default as the database of the project
all = [
    "pymysql>=1.1.1",
    "snowflake-connector-python>=3.15.0",
    "google-cloud-bigquery>=3.34.0",
    "oracledb>=2.0.0",
]
build = [
    "uv~=0.9.5",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.3.4",
    "pre-commit>=4.1.0",
    "pytest-httpx",
    "pytest-cov",
]

[tool.ruff]
target-version = "py39"

# Enable Pyflakes (`F`) and Import sorting (`I`)
[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E711", "E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["back", "chat", "ai"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
"""
changelog_file = "./CHANGELOG.md"
commit_message = "chore(release): bump version to {version}"
